--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4058,6 +4058,7 @@ textarea.form-control-lg {
       --bs-pagination-font-size: 0.76562rem; } }
 
 .badge {
+  
   --bs-badge-padding-x: 0.65em;
   --bs-badge-padding-y: 0.35em;
   --bs-badge-font-size: 0.75em;
@@ -6679,7 +6680,8 @@ textarea.form-control-lg {
   margin-bottom: 0.25rem !important; }
 
 .mb-2 {
-  margin-bottom: 0.5rem !important; }
+  margin-bottom: 0.3rem !important;
+  margin-top: 10px; }
 
 .mb-3 {
   margin-bottom: 1rem !important; }
@@ -12976,7 +12978,8 @@ section {
   border: 1px solid transparent;
   font-size: 12px;
   font-weight: 600; 
-  margin-bottom: 5px;}
+  margin-bottom: 5px;
+  margin-right: 150px;}
   .badge.style-1 {
     background-color: transparent;
     box-shadow: none;
@@ -13116,50 +13119,61 @@ a[class*="badge-outline-"]:hover {
 
 .badge-danger {
   background-color: #CC0D39; 
-  margin-right: 10px;}
+  }
 
 .badge-dark {
   background-color: #000; }
 
 .badge-light {
   background-color: #e4e4e4;
-  color: #000; }
+  color: #000; 
+}
 
 .light.badge-default {
   background: #ADB6C7; }
 
 .light.badge-primary {
   background-color: #7efbcf;
-  color: #04764E; }
+  color: #04764E;
+  margin: 0.5rem 4rem 0.2rem 0.5rem; }
 
 .light.badge-secondary {
   background-color: #fcf5ea;
-  color: #F6DBB3; }
+  color: #F6DBB3; 
+  margin: 0.5rem 4rem 0.2rem 0.5rem;
+}
 
 .light.badge-success {
   background-color: #78ed9f;
-  color: #159E42; }
+  color: #159E42; 
+  margin: 0.5rem 4rem 0.2rem 0.5rem;
+  
+}
 
 .light.badge-info {
   background-color: #e5f4ff;
-  color: #4cb1ff; }
+  color: #4cb1ff; 
+  margin: 0.5rem 4rem 0.2rem 0.5rem;}
 
 .light.badge-warning {
   background-color: #ffeee3;
-  color: #FF8730; }
+  color: #FF8730; 
+  margin: 0.5rem 4rem 0.2rem 0.5rem;}
 
 .light.badge-danger {
   background-color: #fddbe3;
-  color: #CC0D39; }
+  color: #CC0D39;
+  margin: 0.5rem 4rem 0.2rem 0.5rem; }
 
 .light.badge-dark {
   background-color: gray;
-  color: #000; }
+  color: #000; 
+  margin: 0.5rem 4rem 0.2rem 0.5rem;}
 
 .light.badge-light {
   background-color: #f1f1f1;
   color: #000; 
-  margin: 0.2rem 0.5rem 0.2rem 0.5rem}
+  margin: 0.2rem 4rem 0.2rem 0.5rem;}
 
 .bootstrap-label .label {
   display: inline-block;
@@ -17441,7 +17455,7 @@ label input {
         display: flex;
         border-radius: var(--border-radius-xl);
         width: 100%;
-        height: 100%; }
+        height: 140px; }
       .dz-card.list .dz-media .dz-rating {
         padding: 4px 15px;
         background-color: #ff8730;
@@ -17617,8 +17631,7 @@ label input {
     .dz-card-overlay.style-1 .dz-media a {
       display: block;
       width: 100%; }
-      .dz-card-overlay.style-1 .dz-media a img {
-        object-fit: contain;
+      .dz-card-overlay.style-1 .dz-media a img { 
         width: auto;
         width: 100%;
         height: 200px;
@@ -17627,7 +17640,7 @@ label input {
         -ms-transition: all 0.2s;
         transition: all 0.2s; }
     .dz-card-overlay.style-1 .title {
-      margin: 0 0 15px; }
+      margin: 15px 0 0; }
       .dz-card-overlay.style-1 .title a {
         color: #fff; }
     .dz-card-overlay.style-1 .dz-meta li {
@@ -18657,7 +18670,7 @@ label input {
 
 .dz-product-detail {
   padding: 40px 20px 24px;
-  margin-top: -40px;
+  margin-top: 50px;
   background-color: var(--bg-white);
   border-radius: 35px 35px 0px 0px;
   position: relative;
@@ -18780,11 +18793,13 @@ label input {
     .dz-wishlist-bx .dz-info .dz-head {
       margin-bottom: 15px; }
     .dz-wishlist-bx .dz-info p {
-      font-size: 12px;
+      font-size: 13px;
       margin-bottom: 0;
       font-weight: 500;
-      line-height: 12px;
-      color: var(--text-light); }
+      line-height: 14.7px;
+      padding-bottom: 1.5px;
+      color: var(--text-light); 
+    width: 70%;}
     .dz-wishlist-bx .dz-info .dz-meta {
       display: flex;
       align-items: center; }
